# kaizen

./: .gitignore  Cargo.toml  Makefile  README.md  crates.js  docker-compose.yml  search-index.js  settings.html  source-files.js  sqlx-data.json
.github/workflows/: coverage.yml  linux.yml
config/: default.toml
docs/: config.toml  index.html
docs/public/: main.css
docs/sass/: main.scss
docs/templates/: index.html
implementors/actix_auth_middleware/: trait.GetLoginRoute.js
implementors/actix_service/: trait.Service.js
implementors/lazy_static/: trait.LazyStatic.js
kaizen/: all.html  constant.CACHE_AGE.html  constant.COMPILED_DATE.html  constant.GIT_COMMIT_HASH.html  constant.PAGES.html  constant.PKG_DESCRIPTION.html  constant.PKG_HOMEPAGE.html  constant.PKG_NAME.html  constant.V1_API_ROUTES.html  constant.VERSION.html  fn.get_auth_middleware.html  fn.get_identity_service.html  fn.get_json_err.html  fn.main.html  fn.services.html  index.html  sidebar-items.js  struct.CSS.html  struct.CheckLogin.html  struct.Data.html  struct.FILES.html  struct.SETTINGS.html  struct.SOURCE_FILES_OF_INSTANCE.html  struct.Settings.html  type.AppData.html
kaizen/api/: index.html
migrations/: 20210915035153_kaizen_users.sql  20210915044458_kaizen_campaign.sql  20210915044502_kaizen_feedback.sql  20210922081551_kaizen_campaign_pages.sql  20210922081558_kaizen_feedback.sql
scripts/: feedback.py
src/: data.rs  demo.rs  errors.rs  main.rs  settings.rs  tests-migrate.rs  tests.rs
templates/: main.scss
tests_migrate/: all.html  fn.build.html  fn.cache_bust.html  fn.main.html  index.html  struct.Data.html  struct.SETTINGS.html  struct.Settings.html
(+369 files in other folders)
