[package]
name = "kaizen"
version = "0.1.0"
description = "Feedback agregator"
homepage = "https://github.com/realaravinth/kaizen"
repository = "https://github.com/realaravinth/kaizen"
documentation = "https://github.con/realaravinth/kaizen"
readme = "https://github.com/realaravinth/kaizen/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"
default-run = "kaizen"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kaizen"
path = "./src/main.rs"

[[bin]]
name = "tests-migrate"
path = "./src/tests-migrate.rs"

[dependencies]
actix-web = "4.0.0-beta.9"
actix-identity = "0.4.0-beta.2"
actix-http = "3.0.0-beta.8"
actix-rt = "2"
actix-cors = "0.6.0-beta.2"
actix-service = "2.0.0"
my-codegen = {package = "actix-web-codegen", git ="https://github.com/realaravinth/actix-web"}

futures = "0.3.15"

argon2-creds = { branch = "master", git = "https://github.com/realaravinth/argon2-creds"}

sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }

derive_builder = "0.10"
validator = { version = "0.14", features = ["derive"]}
derive_more = "0.99"

config = "0.11"

serde = "1"
serde_json = "1"

pretty_env_logger = "0.4"
log = "0.4"

lazy_static = "1.4"

url = "2.2"

rand = "0.8"

openssl = { version = "0.10.29", features = ["vendored"] }

[build-dependencies]
sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }
